python/parser/ROSMsg_Parser.py
# Generated from /opt/rosbots-rtidl/python/ROSMsg_Parser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ROSMsg_Parser ( Parser ):

    grammarFileName = "ROSMsg_Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'int8'", "'uint8'", "'byte'", 
                     "'char'", "'int16'", "'uint16'", "'int32'", "'uint32'", 
                     "'int64'", "'uint64'", "'float32'", "'float64'", "'string'", 
                     "'time'", "'duration'", "'/'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "<INVALID>", "'---'", "<INVALID>", 
                     "<INVALID>", "'True'", "'False'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "INT8", "UINT8", "BYTE", "CHAR", 
                      "INT16", "UINT16", "INT32", "UINT32", "INT64", "UINT64", 
                      "FLOAT32", "FLOAT64", "STRING", "TIME", "DURATION", 
                      "SLASH", "OPEN_BRACKET", "CLOSE_BRACKET", "ASSIGNMENT", 
                      "PLUS", "MINUS", "HASH", "MESSAGE_SEPARATOR", "INTEGER_LITERAL", 
                      "REAL_LITERAL", "TRUE", "FALSE", "IDENTIFIER", "ROSBAG_MESSAGE_SEPARATOR", 
                      "WHITESPACES", "NEWLINES", "NEWLINE", "STRING_IDENTIFIER", 
                      "STRING_OPEN_BRACKET", "STRING_CLOSE_BRACKET", "STRING_INTEGER_LITERAL", 
                      "STRING_ASSIGNMENT", "STRING_HASH", "STRING_WHITESPACES", 
                      "STRING_NEWLINE", "STRING_VALUE", "STRIN_ASSIGNMENT_NEWLINE", 
                      "COMMENT", "COMMENT_NEWLINE" ]

    RULE_ros_file_input = 0
    RULE_ros_message_input = 1
    RULE_ros_action_input = 2
    RULE_ros_service_input = 3
    RULE_rosbag_input = 4
    RULE_rosbag_nested_message = 5
    RULE_ros_message = 6
    RULE_field_declaration = 7
    RULE_constant_declaration = 8
    RULE_comment = 9
    RULE_identifier = 10
    RULE_type_def = 11
    RULE_ros_type = 12
    RULE_array_type = 13
    RULE_variable_array_type = 14
    RULE_fixed_array_type = 15
    RULE_integral_type = 16
    RULE_floating_point_type = 17
    RULE_temportal_type = 18
    RULE_string_type = 19
    RULE_boolean_type = 20
    RULE_sign = 21
    RULE_integral_value = 22
    RULE_floating_point_value = 23
    RULE_bool_value = 24
    RULE_string_value = 25

    ruleNames =  [ "ros_file_input", "ros_message_input", "ros_action_input", 
                   "ros_service_input", "rosbag_input", "rosbag_nested_message", 
                   "ros_message", "field_declaration", "constant_declaration", 
                   "comment", "identifier", "type_def", "ros_type", "array_type", 
                   "variable_array_type", "fixed_array_type", "integral_type", 
                   "floating_point_type", "temportal_type", "string_type", 
                   "boolean_type", "sign", "integral_value", "floating_point_value", 
                   "bool_value", "string_value" ]

    EOF = Token.EOF
    BOOL=1
    INT8=2
    UINT8=3
    BYTE=4
    CHAR=5
    INT16=6
    UINT16=7
    INT32=8
    UINT32=9
    INT64=10
    UINT64=11
    FLOAT32=12
    FLOAT64=13
    STRING=14
    TIME=15
    DURATION=16
    SLASH=17
    OPEN_BRACKET=18
    CLOSE_BRACKET=19
    ASSIGNMENT=20
    PLUS=21
    MINUS=22
    HASH=23
    MESSAGE_SEPARATOR=24
    INTEGER_LITERAL=25
    REAL_LITERAL=26
    TRUE=27
    FALSE=28
    IDENTIFIER=29
    ROSBAG_MESSAGE_SEPARATOR=30
    WHITESPACES=31
    NEWLINES=32
    NEWLINE=33
    STRING_IDENTIFIER=34
    STRING_OPEN_BRACKET=35
    STRING_CLOSE_BRACKET=36
    STRING_INTEGER_LITERAL=37
    STRING_ASSIGNMENT=38
    STRING_HASH=39
    STRING_WHITESPACES=40
    STRING_NEWLINE=41
    STRING_VALUE=42
    STRIN_ASSIGNMENT_NEWLINE=43
    COMMENT=44
    COMMENT_NEWLINE=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Ros_file_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ros_message_input(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Ros_message_inputContext,0)


        def ros_action_input(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Ros_action_inputContext,0)


        def ros_service_input(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Ros_service_inputContext,0)


        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_ros_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRos_file_input" ):
                listener.enterRos_file_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRos_file_input" ):
                listener.exitRos_file_input(self)




    def ros_file_input(self):

        localctx = ROSMsg_Parser.Ros_file_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ros_file_input)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.ros_message_input()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.ros_action_input()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.ros_service_input()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ros_message_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ros_message(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Ros_messageContext,0)


        def EOF(self):
            return self.getToken(ROSMsg_Parser.EOF, 0)

        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_ros_message_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRos_message_input" ):
                listener.enterRos_message_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRos_message_input" ):
                listener.exitRos_message_input(self)




    def ros_message_input(self):

        localctx = ROSMsg_Parser.Ros_message_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ros_message_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.ros_message()
            self.state = 58
            self.match(ROSMsg_Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ros_action_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ros_message(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMsg_Parser.Ros_messageContext)
            else:
                return self.getTypedRuleContext(ROSMsg_Parser.Ros_messageContext,i)


        def MESSAGE_SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(ROSMsg_Parser.MESSAGE_SEPARATOR)
            else:
                return self.getToken(ROSMsg_Parser.MESSAGE_SEPARATOR, i)

        def EOF(self):
            return self.getToken(ROSMsg_Parser.EOF, 0)

        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_ros_action_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRos_action_input" ):
                listener.enterRos_action_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRos_action_input" ):
                listener.exitRos_action_input(self)




    def ros_action_input(self):

        localctx = ROSMsg_Parser.Ros_action_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ros_action_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.ros_message()
            self.state = 61
            self.match(ROSMsg_Parser.MESSAGE_SEPARATOR)
            self.state = 62
            self.ros_message()
            self.state = 63
            self.match(ROSMsg_Parser.MESSAGE_SEPARATOR)
            self.state = 64
            self.ros_message()
            self.state = 65
            self.match(ROSMsg_Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ros_service_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ros_message(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMsg_Parser.Ros_messageContext)
            else:
                return self.getTypedRuleContext(ROSMsg_Parser.Ros_messageContext,i)


        def MESSAGE_SEPARATOR(self):
            return self.getToken(ROSMsg_Parser.MESSAGE_SEPARATOR, 0)

        def EOF(self):
            return self.getToken(ROSMsg_Parser.EOF, 0)

        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_ros_service_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRos_service_input" ):
                listener.enterRos_service_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRos_service_input" ):
                listener.exitRos_service_input(self)




    def ros_service_input(self):

        localctx = ROSMsg_Parser.Ros_service_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ros_service_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.ros_message()
            self.state = 68
            self.match(ROSMsg_Parser.MESSAGE_SEPARATOR)
            self.state = 69
            self.ros_message()
            self.state = 70
            self.match(ROSMsg_Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rosbag_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ros_message(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Ros_messageContext,0)


        def EOF(self):
            return self.getToken(ROSMsg_Parser.EOF, 0)

        def rosbag_nested_message(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMsg_Parser.Rosbag_nested_messageContext)
            else:
                return self.getTypedRuleContext(ROSMsg_Parser.Rosbag_nested_messageContext,i)


        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_rosbag_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRosbag_input" ):
                listener.enterRosbag_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRosbag_input" ):
                listener.exitRosbag_input(self)




    def rosbag_input(self):

        localctx = ROSMsg_Parser.Rosbag_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rosbag_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.ros_message()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMsg_Parser.ROSBAG_MESSAGE_SEPARATOR:
                self.state = 73
                self.rosbag_nested_message()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(ROSMsg_Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rosbag_nested_messageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROSBAG_MESSAGE_SEPARATOR(self):
            return self.getToken(ROSMsg_Parser.ROSBAG_MESSAGE_SEPARATOR, 0)

        def ros_type(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Ros_typeContext,0)


        def ros_message(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Ros_messageContext,0)


        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_rosbag_nested_message

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRosbag_nested_message" ):
                listener.enterRosbag_nested_message(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRosbag_nested_message" ):
                listener.exitRosbag_nested_message(self)




    def rosbag_nested_message(self):

        localctx = ROSMsg_Parser.Rosbag_nested_messageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rosbag_nested_message)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(ROSMsg_Parser.ROSBAG_MESSAGE_SEPARATOR)
            self.state = 82
            self.ros_type()
            self.state = 83
            self.ros_message()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ros_messageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMsg_Parser.Field_declarationContext)
            else:
                return self.getTypedRuleContext(ROSMsg_Parser.Field_declarationContext,i)


        def constant_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMsg_Parser.Constant_declarationContext)
            else:
                return self.getTypedRuleContext(ROSMsg_Parser.Constant_declarationContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMsg_Parser.CommentContext)
            else:
                return self.getTypedRuleContext(ROSMsg_Parser.CommentContext,i)


        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_ros_message

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRos_message" ):
                listener.enterRos_message(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRos_message" ):
                listener.exitRos_message(self)




    def ros_message(self):

        localctx = ROSMsg_Parser.Ros_messageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ros_message)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ROSMsg_Parser.BOOL) | (1 << ROSMsg_Parser.INT8) | (1 << ROSMsg_Parser.UINT8) | (1 << ROSMsg_Parser.BYTE) | (1 << ROSMsg_Parser.CHAR) | (1 << ROSMsg_Parser.INT16) | (1 << ROSMsg_Parser.UINT16) | (1 << ROSMsg_Parser.INT32) | (1 << ROSMsg_Parser.UINT32) | (1 << ROSMsg_Parser.INT64) | (1 << ROSMsg_Parser.UINT64) | (1 << ROSMsg_Parser.FLOAT32) | (1 << ROSMsg_Parser.FLOAT64) | (1 << ROSMsg_Parser.STRING) | (1 << ROSMsg_Parser.TIME) | (1 << ROSMsg_Parser.DURATION) | (1 << ROSMsg_Parser.HASH) | (1 << ROSMsg_Parser.IDENTIFIER) | (1 << ROSMsg_Parser.STRING_HASH))) != 0):
                self.state = 88
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 85
                    self.field_declaration()
                    pass

                elif la_ == 2:
                    self.state = 86
                    self.constant_declaration()
                    pass

                elif la_ == 3:
                    self.state = 87
                    self.comment()
                    pass


                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(ROSMsg_Parser.IdentifierContext,0)


        def type_def(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Type_defContext,0)


        def array_type(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_field_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declaration" ):
                listener.enterField_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declaration" ):
                listener.exitField_declaration(self)




    def field_declaration(self):

        localctx = ROSMsg_Parser.Field_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_field_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 93
                self.type_def()
                pass

            elif la_ == 2:
                self.state = 94
                self.array_type()
                pass


            self.state = 97
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integral_type(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Integral_typeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(ROSMsg_Parser.IdentifierContext,0)


        def ASSIGNMENT(self):
            return self.getToken(ROSMsg_Parser.ASSIGNMENT, 0)

        def integral_value(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Integral_valueContext,0)


        def floating_point_type(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Floating_point_typeContext,0)


        def floating_point_value(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Floating_point_valueContext,0)


        def boolean_type(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Boolean_typeContext,0)


        def bool_value(self):
            return self.getTypedRuleContext(ROSMsg_Parser.Bool_valueContext,0)


        def string_type(self):
            return self.getTypedRuleContext(ROSMsg_Parser.String_typeContext,0)


        def STRING_ASSIGNMENT(self):
            return self.getToken(ROSMsg_Parser.STRING_ASSIGNMENT, 0)

        def string_value(self):
            return self.getTypedRuleContext(ROSMsg_Parser.String_valueContext,0)


        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_constant_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant_declaration" ):
                listener.enterConstant_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant_declaration" ):
                listener.exitConstant_declaration(self)




    def constant_declaration(self):

        localctx = ROSMsg_Parser.Constant_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constant_declaration)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ROSMsg_Parser.INT8, ROSMsg_Parser.UINT8, ROSMsg_Parser.BYTE, ROSMsg_Parser.CHAR, ROSMsg_Parser.INT16, ROSMsg_Parser.UINT16, ROSMsg_Parser.INT32, ROSMsg_Parser.UINT32, ROSMsg_Parser.INT64, ROSMsg_Parser.UINT64]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.integral_type()
                self.state = 100
                self.identifier()
                self.state = 101
                self.match(ROSMsg_Parser.ASSIGNMENT)
                self.state = 102
                self.integral_value()
                pass
            elif token in [ROSMsg_Parser.FLOAT32, ROSMsg_Parser.FLOAT64]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.floating_point_type()
                self.state = 105
                self.identifier()
                self.state = 106
                self.match(ROSMsg_Parser.ASSIGNMENT)
                self.state = 109
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 107
                    self.integral_value()
                    pass

                elif la_ == 2:
                    self.state = 108
                    self.floating_point_value()
                    pass


                pass
            elif token in [ROSMsg_Parser.BOOL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.boolean_type()
                self.state = 112
                self.identifier()
                self.state = 113
                self.match(ROSMsg_Parser.ASSIGNMENT)
                self.state = 116
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ROSMsg_Parser.TRUE, ROSMsg_Parser.FALSE]:
                    self.state = 114
                    self.bool_value()
                    pass
                elif token in [ROSMsg_Parser.PLUS, ROSMsg_Parser.MINUS, ROSMsg_Parser.INTEGER_LITERAL]:
                    self.state = 115
                    self.integral_value()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [ROSMsg_Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.string_type()
                self.state = 119
                self.identifier()
                self.state = 120
                self.match(ROSMsg_Parser.STRING_ASSIGNMENT)
                self.state = 121
                self.string_value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(ROSMsg_Parser.COMMENT, 0)

        def HASH(self):
            return self.getToken(ROSMsg_Parser.HASH, 0)

        def STRING_HASH(self):
            return self.getToken(ROSMsg_Parser.STRING_HASH, 0)

        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = ROSMsg_Parser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                _la = self._input.LA(1)
                if not(_la==ROSMsg_Parser.HASH or _la==ROSMsg_Parser.STRING_HASH):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 126
                self.match(ROSMsg_Parser.COMMENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                _la = self._input.LA(1)
                if not(_la==ROSMsg_Parser.HASH or _la==ROSMsg_Parser.STRING_HASH):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ROSMsg_Parser.IDENTIFIER, 0)

        def STRING_IDENTIFIER(self):
            return self.getToken(ROSMsg_Parser.STRING_IDENTIFIER, 0)

        def INT8(self):
            return self.getToken(ROSMsg_Parser.INT8, 0)

        def UINT8(self):
            return self.getToken(ROSMsg_Parser.UINT8, 0)

        def INT16(self):
            return self.getToken(ROSMsg_Parser.INT16, 0)

        def UINT16(self):
            return self.getToken(ROSMsg_Parser.UINT16, 0)

        def INT32(self):
            return self.getToken(ROSMsg_Parser.INT32, 0)

        def UINT32(self):
            return self.getToken(ROSMsg_Parser.UINT32, 0)

        def INT64(self):
            return self.getToken(ROSMsg_Parser.INT64, 0)

        def UINT64(self):
            return self.getToken(ROSMsg_Parser.UINT64, 0)

        def BYTE(self):
            return self.getToken(ROSMsg_Parser.BYTE, 0)

        def CHAR(self):
            return self.getToken(ROSMsg_Parser.CHAR, 0)

        def FLOAT32(self):
            return self.getToken(ROSMsg_Parser.FLOAT32, 0)

        def FLOAT64(self):
            return self.getToken(ROSMsg_Parser.FLOAT64, 0)

        def TIME(self):
            return self.getToken(ROSMsg_Parser.TIME, 0)

        def DURATION(self):
            return self.getToken(ROSMsg_Parser.DURATION, 0)

        def STRING(self):
            return self.getToken(ROSMsg_Parser.STRING, 0)

        def BOOL(self):
            return self.getToken(ROSMsg_Parser.BOOL, 0)

        def TRUE(self):
            return self.getToken(ROSMsg_Parser.TRUE, 0)

        def FALSE(self):
            return self.getToken(ROSMsg_Parser.FALSE, 0)

        def getRuleIndex(self):
            return ROSMsg_Parser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = ROSMsg_Parser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_identifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ROSMsg_Parser.BOOL) | (1 << ROSMsg_Parser.INT8) | (1 << ROSMsg_Parser.UINT8) | (1 << ROSMsg_Parser.BYTE) | (1 << ROSMsg_Parser.CHAR) | (1 << ROSMsg_Parser.INT16) | (1 << ROSMsg_Parser.UINT16) | (1 << ROSMsg_Parser.INT32) | (1 << ROSMsg_Parser.UINT32) | (1 << ROSMsg_Parser.INT64) | (1 << ROSMsg_Parser.UINT64) | (1 << ROSMsg_Parser.FLOAT32) | (1 << ROSMsg_Parser.FLOAT64) | (1 << ROSMsg_Parser.STRING) | (1 << ROSMsg_Parser.TIME) | (1 << ROSMsg_Parser.DURATION) | (1 << ROSMsg_Parser.TRUE) | (1 << ROSMsg_Parser.FALSE) | (1 << ROSMsg_Parser.IDENTIFIER) | (1 << ROSMsg_Parser.STRING_IDENTIFIER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_defContext(ParserRuleContext):
        __slots__ = 'parser'
